--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -62,7 +62,7 @@
 			</a>
 		</div>
 		<div class="project" id="project5">
-			<a href="project.html" class="thumbnail">
+			<a href="project" class="thumbnail">
 				<img src="images/lorempixel.abstract.8.jpeg" alt="Lorem Pixel image" class="img">
 				<p>Visualization</p>
 			</a>
